# nsbi4hep

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  check-ALICE-kinematics.ipynb  check-mcfm-coefficients.ipynb  check-mcfm-events.ipynb  plot-alice-outputs.ipynb  plot-alice-reweight.ipynb  plot-calibration.py  plot-calibration_.py  plot-carl-outputs.ipynb  plot-rolypoly-outputs.ipynb  pyproject.toml  requirements.txt  scaler.pkl  singularity.def  train-carl.py
alice/: dataset.py  model.py
carl/: dataset.py  model.py  train.py
configs/: conf_tune_carl.yaml
containers/: raven.def
datasets/: __init__.py  alice.py  balanced.py  coefficient.py  jointlikelihood.py
hpo/: tune_carl.py
jobs/: train-alice.py  train-carl.py  train-rolypoly.py
models/: __init__.py  alice.py  carl.py  model_wrapper.py  rolypoly.py  taylr.py
notebooks/: 2l2v-kinematics.ipynb  4l-kinematics.ipynb  check-Z-cand-performance.ipynb  check-c6.ipynb  check-kinematics.ipynb  check-mandelstam.ipynb  check-mcfm-coefficients.ipynb  check-mcfm-events.ipynb  check-mcfm-msq.ipynb  check-mcfm-sbi.ipynb  check-mcfm-shuffle.ipynb  check-mcfm-weights.ipynb  check-zcand-performance.ipynb  classifier-c6.ipynb  classifier-toy.ipynb  eft-weights.ipynb  plot-NLL-curve.ipynb  plot-alice-SBI-vs-BKG-construction.ipynb  plot-alice-outputs-refactor.ipynb  plot-alice-outputs.ipynb  plot-alice-reweight.ipynb  plot-angles-refactor.ipynb  plot-angles-vs-truth.ipynb  plot-angles.ipynb  plot-c6-cH-statistic.ipynb  plot-carl-outputs.ipynb  plot-carl-performance.ipynb  plot-carl-qqZZ-SBI.ipynb  plot-coefficient-changes.ipynb  plot-kinematics-ggZZ-BSM.ipynb  plot-kinematics-qqZZ-ggZZ.ipynb  plot-rolypoly-outputs.ipynb  plot-rolypoly-performance.ipynb  plot-rolypoly-reweight.ipynb  plot-weights.ipynb  sensitivity-best.ipynb  sensitivity-m4l.ipynb  sensitivity-mem.ipynb
nsbi/: taylr.py
physics/: constants.py  variables.py
plots/: 4l_mzz.ipynb  (+9 more)
(+115 files in other folders)
