[project]
name = "nsbi"
version = "0.1.0"
description = "Neural Simulation-based Inference"
readme = "README.md"
requires-python = "<3.14,>=3.11"
license = {file = "LICENSE"}
keywords = ["nsbi", "ray", "hpo", "hpc"]
authors = [
  {name = "X. Ju", email = "xju@lbl.gov" }
]
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "lightning (>=2.5.3,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "vector (>=1.6.3,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "ray[tune] (>=2.49.0,<3.0.0)",
    "wandb>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/hep-cce/nsbi4hep"

[project.scripts]
nsbi = "nsbi.tools.entry_cli:main"

[tool.uv.workspace]
members = ["nsbi"]

[tool.uv.sources]
nsbi = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=2.0.3",
    "pymdown-extensions>=10.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nsbi"]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src",
    "--color=yes",
    "--doctest-modules",
    "--strict-markers",
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["*ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["agents"] }

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["E501"]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
